syntax = "proto3";

package accounts.login.password.response;

import "accounts/auth_tokens.proto";

enum Error {
    INVALID_CREDENTIALS = 0;
    USER_NOT_FOUND = 1;
    INCORRECT_PASSWORD = 2;
    INVALID_PASSWORD = 3;
    TOO_MANY_REQUESTS = 4;
    SERVER_ERROR = 5;
}

message Token {
    oneof token_field {
        string response = 1;
        accounts.auth_tokens.AuthTokens tokens = 2;
    }
}

message Success {
    Token token = 1;
    bool requires_totp = 2;
}

message Response {
  oneof response_field {
    Error error = 1;
    Success success = 2;
  }
}

